@@ -718,8 +718,12 @@ Common
 Does nothing.  Preserved for backward compatibility.
 
 flto
-Common Var(flag_generate_lto)
+Common  RejectNegative Var(flag_generate_lto)
 Causes Link Time Optimization to be written into the object file. 
+
+fltrans
+Common  RejectNegative Report Var(flag_ltrans) Init(0) Optimization
+Run Link-time Optimizer in Local-Transformation mode
 
 fmath-errno
 Common Report Var(flag_errno_math) Init(1) Optimization
@@ -1357,8 +1361,8 @@ Common Report Var(flag_whole_program) Init(0) Optimization
 Perform whole program optimizations
 
 fwpa
-Common Report Var(flag_wpa) Init(0) Optimization
-Run LTO in WPA mode
+Common RejectNegative Report Var(flag_wpa) Init(0) Optimization
+Run Link-time Optimizer in Whole-Program-Analysis mode
 
 fwrapv
 Common Report Var(flag_wrapv) Optimization
