@@ -645,19 +645,6 @@ lto_main (int debug_p ATTRIBUTE_UNUSED)
                               /*top_level=*/1,
                               /*at_end=*/0);
 
-  /* This is some bogus wrapper code for development testing.  It will be
-     replaced once some basic WPA partitioning logic is implemented.  To use
-     this pass "-flto -fsyntax-only" to the lto1 invocation.  */
-  if (flag_generate_lto)
-    {
-      lto_file *file;
-
-      file = lto_elf_file_open ("bogus.lto.o", /*writable=*/true);
-      if (!file)
-	fatal_error ("lto_elf_file_open() failed");
-      lto_set_current_out_file (file);
-    }
-
   /* Let the middle end know that we have read and merged all of the
      input files.  */ 
   /*cgraph_finalize_compilation_unit ();*/
@@ -684,16 +671,6 @@ lto_main (int debug_p ATTRIBUTE_UNUSED)
       pass_ipa_inline.pass.execute ();
 
       bitmap_obstack_release (NULL);
-    }
-
-  /* This is the continuation of the previous bogus wrapper code.  It will be
-     replaced once some basic WPA partitioning logic is implemented.  */
-  if (flag_generate_lto)
-    {
-      lto_file *file;
-
-      file = lto_set_current_out_file (NULL);
-      lto_elf_file_close (file);
     }
 
   if (flag_wpa)
